@@ -7,6 +7,9 @@ Laboratorio de sercios de PSO
 https://docs.google.com/document/d/1a12tTge9tk0LUATUwzwNKEjIoB5q6Jw86fxCJsyxOmA/edit?tab=t.0
 
 # COMPILAR 
-'''java
-perron
-'''
+javac --module-path $PATH_TO_FX --add-modules javafx.controls HelloFX.java 
+
+# CORRER 
+```
+java --module-path $PATH_TO_FX --add-modules javafx.controls HelloFX
+```
